dodan locales en/fr/de jos samo trebam napraviti file u kojemu je prijevod određene stranice

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,5 +15,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+       <p align ="center"> {% trans %}Synfony is great food for people{% endtrans %}</p>
     </body>
 </html>
