--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,6 @@
     </head>
     <body>
         {% block body %}{% endblock %}
-       <p align ="center"> {% trans %}Synfony is great food for people{% endtrans %}</p>
+       <p align ="center"> {% trans %}Symfony is great{% endtrans %}</p>
     </body>
 </html>
